--- a/main.html
+++ b/main.html
@@ -13,6 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Coda:wght@400;800&family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script><script type='text/javascript' src='loadImg.js'></script><script>
+        $(function(){
+                $('img').imgPreload()
+            })
+    </script> -->
 </head>
 <body>
 <div class="header" id="header">
@@ -40,8 +45,8 @@
     </div>
     </div>
 <div class="headerwrapper"></div>
-<div id="prevchangingimage"  alt=""><div class="fulloader"><div class="loadelem ful"></div></div>СТРАХ НАД<br> НЕВОЙ</div>
-<div id="changingimage"  alt=""><div class="fulloader"><div class="loadelem ful"></div></div>СТРАХ НАД<br> НЕВОЙ</div>
+<div id="prevchangingimage"  alt="">СТРАХ НАД<br> НЕВОЙ</div>
+<div id="changingimage"  alt="">СТРАХ НАД<br> НЕВОЙ</div>
 <div id="about"></div>
 <div class="textblock" id="about">О НАС</div>
 <div class="about">
@@ -57,79 +62,79 @@
     <div class="pseudobox-top"></div>
     <div class="projectbox">
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/124082/annot/', '_blank')">
-                <div class="project-image"><img src="spetsialist.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Cпециалист</h1>
+                <div class="project-image"><img src="spetsialist.jpg" class='imgc' alt="0"></div>
+                <h1 class="project-title">Специалист</h1>
                 <h2 class="project-type">2018</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/129696/annot/', '_blank')">
-                <div class="project-image"><img src="poselentsy.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="poselentsy.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Поселенцы</h2>
                 <h2 class="project-type">2018</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/135503/annot/', '_blank')">
-                <div class="project-image"><img src="zmei.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Змеи и Лестницы</h2>
+                <div class="project-image"><img src="zmei.jpg" class='imgc' alt="0"></div>
+                <h1 class="project-title">Змеи и лестницы</h2>
                 <h2 class="project-type">2020</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/138143/annot/', '_blank')">
-                <div class="project-image"><img src="kapkan.PNG" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Капкан для Монстра</h2>
+                <div class="project-image"><img src="kapkan.PNG" class='imgc' alt="0"></div>
+                <h1 class="project-title">Капкан для монстра</h2>
                 <h2 class="project-type">2020</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/148256/annot/', '_blank')">
-                <div class="project-image"><img src="tayna.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Тайна Спящей Дамы</h2>
+                <div class="project-image"><img src="tayna.jpg" class='imgc' alt="0"></div>
+                <h1 class="project-title">Тайна спящей дамы</h2>
                 <h2 class="project-type">2021</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/148381/annot/', '_blank')">
-                <div class="project-image"><img src="staya.PNG" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="staya.PNG" class='imgc' alt="0"></div>
                 <h1 class="project-title">Стая</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/157907/annot/', '_blank')">
-                <div class="project-image"><img src="repeynik.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="repeynik.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Репейник</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/159050/annot/', '_blank')">
-                <div class="project-image"><img src="romashek.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Город Ромашек</h2>
+                <div class="project-image"><img src="romashek.jpg" class='imgc' alt="0"></div>
+                <h1 class="project-title">Город ромашек</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/159639/annot/', '_blank')">
-                <div class="project-image"><img src="zhenih.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Жених из Хорошей Семьи</h2>
+                <div class="project-image"><img src="zhenih.jpg" class='imgc' alt="0"></div>
+                <h1 class="project-title">Жених из хорошей семьи</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/173548/annot/', '_blank')">
-                <div class="project-image"><img src="tenn.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="tenn.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Тень саламандры</h2>
                 <h2 class="project-type">2023</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/173549/annot/', '_blank')">
-                <div class="project-image"><img src="semm.PNG" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Семь минус Один</h2>
+                <div class="project-image"><img src="semm.PNG" class='imgc' alt="0"></div>
+                <h1 class="project-title">Семь минус один</h2>
                 <h2 class="project-type">2023</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/188280/annot/', '_blank')">
-                <div class="project-image"><img src="vzglyad.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="vzglyad.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Взгляд русалки</h2>
                 <h2 class="project-type">2024</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/185468/annot/', '_blank')">
-                <div class="project-image"><img src="konec.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Конец Игры</h2>
+                <div class="project-image"><img src="konec.jpg" class='imgc' alt="0"></div>
+                <h1 class="project-title">Конец игры</h2>
                 <h2 class="project-type">2024</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
-                <div class="project-image"><img src="pochta.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="pochta.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Почтальонша</h2>
                 <h2 class="project-type">2024 - ...</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/167268/annot/', '_blank')">
-                <div class="project-image"><img src="neva.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Страх над Невой</h2>
+                <div class="project-image"><img src="neva.jpg" class='imgc' alt="0"></div>
+                <h1 class="project-title">Страх над невой</h2>
                 <h2 class="project-type">2023 - ...</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/184673/annot/', '_blank')">
-                <div class="project-image"><img src="kukushonok.png" lowsrc="1.jpg" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="kukushonok.png" lowsrc="1.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Кукушонок</h2>
                 <h2 class="project-type">В производстве</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/195739/annot/', '_blank')">
-                <div class="project-image"><img src="denezhnoe.png" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Денежное Дерево</h2>
+                <div class="project-image"><img src="denezhnoe.png" class='imgc' alt="0"></div>
+                <h1 class="project-title">Денежное дерево</h2>
                 <h2 class="project-type">В производстве</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/196733/annot/', '_blank')">
-                <div class="project-image"><img src="rimskih.png" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
-                <h1 class="project-title">Тайна Римских Цифр</h2>
+                <div class="project-image"><img src="rimskih.png" class='imgc' alt="0"></div>
+                <h1 class="project-title">Тайна римских цифр</h2>
                 <h2 class="project-type">В производстве</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/198540/annot/', '_blank')">
-                <div class="project-image"><img src="prigovor.png" class='imgc' alt="0"><div class="loader"><div class="loadelem"></div></div></div>
+                <div class="project-image"><img src="prigovor.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Приговор</h2>
                 <h2 class="project-type">В производстве</h2></div>
         </div>
@@ -158,6 +163,8 @@
 <a class="apps-image-container" href="https://www.rusproducers.com/"><img class="apps-image" src="apkit.svg" alt=""></a>
 <p class="apps-text">2025</p>
 </div>
+<!-- <div class="loader"><div class="loadelem"></div></div> -->
+<!-- <div class="fulloader"><div class="loadelem ful"></div></div> -->
 <script src="royel.js"></script>
 </body>
 </html>
