--- a/main.html
+++ b/main.html
@@ -109,6 +109,10 @@
                 <div class="project-image"><img src="vzglyad.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Взгляд русалки</h2>
                 <h2 class="project-type">2024</h2></div>
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/167268/annot/', '_blank')">
+                <div class="project-image"><img src="neva.jpg" class='imgc' alt="0"></div>
+                <h1 class="project-title">Страх над невой</h2>
+                <h2 class="project-type">2023</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/185468/annot/', '_blank')">
                 <div class="project-image"><img src="konec.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Конец игры</h2>
@@ -116,11 +120,15 @@
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
                 <div class="project-image"><img src="pochta.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Почтальонша</h2>
-                <h2 class="project-type">2024 - ...</h2></div>
+                <h2 class="project-type">2024</h2></div>
+        <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
+                <div class="project-image"><img src="pochta.jpg" class='imgc' alt="0"></div>
+                <h1 class="project-title">Почтальонша. Сезон 2</h2>
+                <h2 class="project-type">В производстве</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/167268/annot/', '_blank')">
                 <div class="project-image"><img src="neva.jpg" class='imgc' alt="0"></div>
-                <h1 class="project-title">Страх над невой</h2>
-                <h2 class="project-type">2023 - ...</h2></div>
+                <h1 class="project-title">Страх над невой. Огненный круг</h2>
+                <h2 class="project-type">В производстве</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/184673/annot/', '_blank')">
                 <div class="project-image"><img src="kukushonok.png" lowsrc="1.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Кукушонок</h2>
