--- a/main.html
+++ b/main.html
@@ -117,11 +117,11 @@
                 <h1 class="project-title">Почтальонша</h2>
                 <h2 class="project-type">2024</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
-                <div class="project-image"><img src="pochta.jpg" class='imgc' alt="0"></div>
+                <div class="project-image"><img src="pochta2.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Почтальонша. Сезон 2</h2>
                 <h2 class="project-type">В производстве</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/167268/annot/', '_blank')">
-                <div class="project-image"><img src="neva.jpg" class='imgc' alt="0"></div>
+                <div class="project-image"><img src="neva2.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Страх над невой. Огненный круг</h2>
                 <h2 class="project-type">В производстве</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/184673/annot/', '_blank')">
