--- a/main.html
+++ b/main.html
@@ -73,7 +73,7 @@
                 <h1 class="project-title">Капкан для монстра</h2>
                 <h2 class="project-type">2020</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/148256/annot/', '_blank')">
-                <div class="project-image"><img src="tayna.jpg" class='imgc' alt="0"></div>
+                <div class="project-image"><img src="tayna.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Тайна спящей дамы</h2>
                 <h2 class="project-type">2021</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/148381/annot/', '_blank')">
@@ -81,19 +81,19 @@
                 <h1 class="project-title">Стая</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/157907/annot/', '_blank')">
-                <div class="project-image"><img src="repeynik.jpg" class='imgc' alt="0"></div>
+                <div class="project-image"><img src="repeynik.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Репейник</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/159050/annot/', '_blank')">
-                <div class="project-image"><img src="romashek.jpg" class='imgc' alt="0"></div>
+                <div class="project-image"><img src="romashek.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Город ромашек</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/159639/annot/', '_blank')">
-                <div class="project-image"><img src="zhenih.jpg" class='imgc' alt="0"></div>
+                <div class="project-image"><img src="zhenih.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Жених из хорошей семьи</h2>
                 <h2 class="project-type">2022</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/173548/annot/', '_blank')">
-                <div class="project-image"><img src="tenn.jpg" class='imgc' alt="0"></div>
+                <div class="project-image"><img src="tenn.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Тень саламандры</h2>
                 <h2 class="project-type">2023</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/173549/annot/', '_blank')">
@@ -101,7 +101,7 @@
                 <h1 class="project-title">Семь минус один</h2>
                 <h2 class="project-type">2023</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/188280/annot/', '_blank')">
-                <div class="project-image"><img src="vzglyad.jpg" class='imgc' alt="0"></div>
+                <div class="project-image"><img src="vzglyad.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Взгляд русалки</h2>
                 <h2 class="project-type">2024</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/167268/annot/', '_blank')">
@@ -113,7 +113,7 @@
                 <h1 class="project-title">Конец игры</h2>
                 <h2 class="project-type">2024</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
-                <div class="project-image"><img src="pochta.jpg" class='imgc' alt="0"></div>
+                <div class="project-image"><img src="pochta.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Почтальонша</h2>
                 <h2 class="project-type">2024</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
