--- a/main.html
+++ b/main.html
@@ -40,8 +40,9 @@
     </div>
     </div>
 <div class="headerwrapper"></div>
-<div id="prevchangingimage"  alt="">СТРАХ НАД<br> НЕВОЙ</div>
-<div id="changingimage"  alt="">СТРАХ НАД<br> НЕВОЙ</div>
+<div id="prevchangingimage"  alt="">СТРАХ<br>НАД НЕВОЙ</div>
+<div id="changingimage"  alt="">СТРАХ<br>НАД НЕВОЙ</div>
+<div class="imagewrapper"></div>
 <div id="about"></div>
 <div class="textblock" id="about">О НАС</div>
 <div class="about">
@@ -118,28 +119,28 @@
                 <h2 class="project-type">2024</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/183149/annot/', '_blank')">
                 <div class="project-image"><img src="pochta2.jpg" class='imgc' alt="0"></div>
-                <h1 class="project-title">Почтальонша. Сезон 2</h2>
-                <h2 class="project-type">В производстве</h2></div>
+                <h1 class="project-title">Почтальонша-2</h2>
+                <h2 class="project-type">Скоро</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/167268/annot/', '_blank')">
                 <div class="project-image"><img src="neva2.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Страх над невой. Огненный круг</h2>
-                <h2 class="project-type">В производстве</h2></div>
+                <h2 class="project-type">Скоро</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/184673/annot/', '_blank')">
                 <div class="project-image"><img src="kukushonok.png" lowsrc="1.jpg" class='imgc' alt="0"></div>
                 <h1 class="project-title">Кукушонок</h2>
-                <h2 class="project-type">В производстве</h2></div>
+                <h2 class="project-type">Скоро</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/195739/annot/', '_blank')">
                 <div class="project-image"><img src="denezhnoe.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Денежное дерево</h2>
-                <h2 class="project-type">В производстве</h2></div>
+                <h2 class="project-type">Скоро</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/196733/annot/', '_blank')">
                 <div class="project-image"><img src="rimskih.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Тайна римских цифр</h2>
-                <h2 class="project-type">В производстве</h2></div>
+                <h2 class="project-type">Скоро</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/198540/annot/', '_blank')">
                 <div class="project-image"><img src="prigovor.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Приговор</h2>
-                <h2 class="project-type">В производстве</h2></div>
+                <h2 class="project-type">Скоро</h2></div>
         </div>
         <div class="pseudobox-bottom"></div>
 </div>
