--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
                 <h1 class="project-title">Специалист</h1>
                 <h2 class="project-type">2018</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/129696/annot/', '_blank')">
-                <div class="project-image"><img src="poselentsy.jpg" class='imgc' alt="0"></div>
+                <div class="project-image"><img src="poselentsy.png" class='imgc' alt="0"></div>
                 <h1 class="project-title">Поселенцы</h2>
                 <h2 class="project-type">2018</h2></div>
         <div class="project" onclick="window.open('https://www.kino-teatr.ru/kino/movie/ros/135503/annot/', '_blank')">
